migrate to Java 17 (#153)